k8s/vivid-kernel-pgsql-statefulset.yml
# GNU AFFERO GENERAL PUBLIC LICENSE
# Version 3, 19 November 2007
#
# Copyright (C) 2007 Free Software Foundation, Inc. <https://fsf.org/>
# Everyone is permitted to copy and distribute verbatim copies
# of this license document, but changing it is not allowed.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vivid-kernel-pgsql-statefulset
spec:
  serviceName: "vivid-kernel-pgsql"
  replicas: 1
  selector:
    matchLabels:
      app: vivid-kernel-pgsql
  template:
    metadata:
      labels:
        app: vivid-kernel-pgsql
    spec:
      containers:
      - name: vivid-kernel-pgsql
        image: postgres:latest
        ports:
        - containerPort: 5432
        livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - sa
            initialDelaySeconds: 30
            periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - sa
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: vivid-kernel-pgsql-data
          mountPath: /mnt/vivid-kernel-pgsql-data
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits: 
          memory: "512Mi"
          cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: vivid-kernel-pgsql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 500Mi
      storageClassName: hostpath
