k8s/vivid-kernel-webservice-deployment.yml
# GNU AFFERO GENERAL PUBLIC LICENSE
# Version 3, 19 November 2007
#
# Copyright (C) 2007 Free Software Foundation, Inc. <https://fsf.org/>
# Everyone is permitted to copy and distribute verbatim copies
# of this license document, but changing it is not allowed.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vivid-kernel-webservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vivid-kernel-webservice
  template:
    metadata:
      labels:
        app: vivid-kernel-webservice
    spec:
      containers:
      - name: vivid-kernel-webservice
        image: mougnibas/vivid-kernel-webservice-pgsql:1.0.0-snapshot
        ports:
        - containerPort: 5190
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
